# kanda

./: CONTRIBUTING.md  README.md  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml
Frontend/: index.html  package-lock.json  tailwind.config.js
Frontend/src/: App.tsx  index.css
Frontend/src/components/: GeoIntelligencePanel.tsx  Icons.tsx  ProcessNode.tsx  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  account.py  entity.py  occurrence.py
backend/app/routers/: __init__.py  dashboard.py  occurrences.py
backend/app/schemas/: occurrence.py
backend/app/services/: cloudinary.py  identity.py  priority.py  vision.py
backend/app/tasks/: __init__.py  ai.py  celery_app.py
docs/: Kanda-Backend.md  architecture.md  backend-api.txt  demo-readiness.md  development.md  final-frontend-audit.md  final-polish-report.md  frontend-architecture.md  handoff.md  mobile-alignment-review.md  mobile-integration.md  mobile-review.md  phases.md  procedures.md  roadmap.md  rules.md  technical-spec.md  web-scope.md
docs/api/: README.md  openapi.yaml
kanda-mobile/: README.md  app.json  babel.config.js  package-lock.json  package.json
src/components/: BeneficioCard.tsx  ScrollReveal.tsx
src/hooks/: useScrollReveal.ts
src/pages/: OcorrenciaPage.tsx
src/sections/: BeneficiosSection.tsx  HeroSection.tsx
src/services/: occurrenceService.ts
src/types/: occurrence.ts
(+95 files in other folders)
