[project]
name = "kanda-backend"
version = "0.1.0"
description = "Backend API for Kanda project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.95.2",
  "uvicorn[standard]>=0.22.0",
  "tortoise-orm>=0.19.0",
  "asyncpg>=0.27.0",
  "python-dotenv>=1.0.0",
  "pydantic>=1.10.8",
  "cloudinary>=1.28.0",
  "httpx>=0.24.0",
  "celery[redis]>=5.3.0",
  "redis>=4.5.0",
  "python-multipart>=0.0.6",
  "Pillow>=10.0.0",
  "transformers>=4.40.0",
  "accelerate>=0.27.0",
  "safetensors>=0.4.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
